# OP.lab1

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  operations.cpp  operations.h
